--- a/paper/literatura.bib
+++ b/paper/literatura.bib
@@ -51,3 +51,9 @@
 	title = {Umjetna inteligencija: Evolucijsko računarstvo},
 	year = {2019}
 }
+
+@Misc{diagrams,
+  title = {diagrams.net},
+  howpublished = {\url{https://app.diagrams.net/}},
+  note = {Accessed: 2022-06-03}
+}
