--- a/paper/zavrsni.tex
+++ b/paper/zavrsni.tex
@@ -2,6 +2,9 @@
 \usepackage{booktabs}
 \usepackage{algorithm,algpseudocode}
 \usepackage{lipsum}
+\usepackage{float}
+\usepackage{graphicx} 
+\graphicspath{ {./images/} }
 
 \begin{document}
 
