--- a/paper/Context_Free_Grammars.tex
+++ b/paper/Context_Free_Grammars.tex
@@ -32,6 +32,6 @@ Context-free grammars are a subset of unrestricted grammars which impose one add
 	\item $C \rightarrow abba$
 \end{list}
 
-Context-free grammars get their name from their property that every nonterminal symbol $A$ from $V$ can be substituted with a string of terminals and nonterminals $S$ if there exists a production rule in $P$ such that $A \rightarrow S$, no matter it's surrounding context in the intermediate string.
+Context-free grammars get their name from their property that every nonterminal symbol $A$ from $V$ can be substituted with a string of terminals and nonterminals $S$ if there exists a production rule in $P$ such that $A \rightarrow S$, no matter its surrounding context in the intermediate string.
 
 Context-free grammars have played a central role in the development of the compiler technology \citep{hopcroft2007automatatheory}. They are used to define syntax rules of a language, as they are expressive enough to allow recursions, nesting and other concepts we expect from programming languages, yet they are simple enough to be parsed effectively.
