--- a/paper/Introduction_Body.tex
+++ b/paper/Introduction_Body.tex
@@ -10,4 +10,4 @@ Genetic programming is a branch of evolutionary computing whose primary concern 
 
 One of the main tools in compiler design are context-free grammars. They provide an elegant, formal way of describing the structural rules of computer programs, and each valid computer program written in some arbitrary language satisfies the rules of that language's grammar. Grammar based approaches in the field of genetic programming has enjoyed much popularity \citep{neill2003grammaticalevolution}, and of the most popular and used technique is the grammatical evolution.
 
-The topic of this thesis is using grammatical evolution in solving a popular benchmarking problem in the field of genetic programming, which is evolving cache replacement policy. The rest of this thesis is organised as follows: chapter 2 covers the theoretical background involved in solving this problem, chapter 3 explains the problem of cache replacement policies and explains how the problem can be solved using grammatical evolution, chapter 4 covers the experiment design and results, and chapter 5 covers a conclusion of the thesis. Finally, in the appendix A, the software system constructed for the experiments covered in chapter 4 is described in detail.
+The topic of this thesis is using grammatical evolution in solving a popular benchmarking problem in the field of genetic programming, which is evolving cache replacement policies. The rest of this thesis is organised as follows: chapter 2 covers the theoretical background involved in solving this problem, chapter 3 explains the problem of cache replacement policies and explains how the problem can be solved using grammatical evolution, chapter 4 covers the experiment design and results, and chapter 5 covers a conclusion of the thesis. Finally, in the appendix A, the software system constructed for the experiments covered in chapter 4 is described in detail.
