--- a/paper/literatura.bib
+++ b/paper/literatura.bib
@@ -53,7 +53,19 @@
 }
 
 @Misc{diagrams,
-  title = {diagrams.net},
-  howpublished = {\url{https://app.diagrams.net/}},
-  note = {Accessed: 2022-06-03}
+  	title = {diagrams.net},
+  	howpublished = {\url{https://app.diagrams.net/}},
+  	note = {Accessed: 2022-06-03}
+}
+
+@Misc{data,
+	title = {Oberlin {C}ollege {C}omputer {S}cience, {C}ourse {C}omputer {O}rganization,  {H}omework {A}ssignment 6},
+	howpublished = {\url{https://occs.oberlin.edu/~ctaylor/classes/210SP13/cache.html}},
+	note = {Accessed: 2022-06-05}
+}
+
+@Misc{box_plots,
+	title = {Libre{O}ffice {C}alc},
+	howpublished = {\url{https://www.libreoffice.org/discover/calc/}},
+	note = {Diagrams generated: 2022-06-07}
 }
