--- a/paper/Software_Architecture.tex
+++ b/paper/Software_Architecture.tex
@@ -28,18 +28,20 @@ The other part of the implementation is the classes used for the purpose of evol
 	\item \textbf{OPT} - an implementation of the OPT strategy
 \end{list}
 
-For the sake of simplicity and the adherence to the 'separation of concerns' principle, the main function was split into four files, each with its own main function. These files are:
+For the sake of simplicity and the adherence to the 'separation of concerns' principle, the main function was split into six files, each with its own main function. These files are:
 
 \begin{list}{$\bullet$}{}  	
 	\item \textbf{init} - initializes a random population and stores each unit's genotype in a separate file inside the /solutions directory
 	\item \textbf{decode} - reads the genotypes of every unit inside the current population and decodes their genotypes to their phenotypes, which are then stored inside the GeneratedStrategies
-	\item \textbf{run} - tests each strategy from the GeneratedStrategies using the test data, and stores their scored inside the /results directory
+	\item \textbf{run} - tests all strategies from the GeneratedStrategies using the train data, and stores their scores inside the /results directory
 	\item \textbf{evolution} - reads each strategy's score and performs the evolutionary process of creating a new generation, which is then stored inside the /solutions directory
+	\item \textbf{test\_generated} - simulates a generated strategy using the test data and outputs its hit count
+	\item \textbf{test\_heuristic\_strategies} - simulates the heuristic stragies using the test data and outputs their hit counts
 \end{list}
 
-During each iteration of the evolutionary process, new strategies are generated and stored as C++ files, which need to be compiled before they can be run. The class responsible for decoding the genotype of each unit, which is an array of 8-bit numbers, to its corresponding phenotype, which is a computer program, is the GrammaticalEvolution class. This class has a decode method which takes as input some Unit and returns its phenotype representation as a string. This string needs to be carefully placed into a specific file, so that it can be correctly compiled and run. This is the responsibility of the main loop of the program. This main loop isn't written as a C++ file, instead it is a bash script. This bash script manages and calls the four files which do a specific part of the evolutionary process, recompiles the parts of the code that change during each iteration, and assures the persistency of the generated strategies between each run. Each strategy has a genotype, phenotype and score, and each of these is stored inside a different textual file.
+During each iteration of the evolutionary process, new strategies are generated and stored as C++ files, which need to be compiled before they can be run. The class responsible for decoding the genotype of each unit, which is an array of 8-bit numbers, to its corresponding phenotype, which is a computer program, is the GrammaticalEvolution class. This class has a decode method which takes as input some Unit and returns its phenotype representation as a string. This string needs to be carefully placed into a specific file, so that it can be correctly compiled and run. This is the responsibility of the main loop of the program. This main loop isn't written as a C++ file, instead it is a bash script. This bash script manages and calls the six files which do a specific part of the evolutionary process, recompiles the parts of the code that change during each iteration, and assures the persistency of the generated strategies between each run. Each strategy has a genotype, phenotype and score, and each of these is stored inside a different textual file.
 
-Figure A.1 shows a class diagram of the complete project. The classes which belong to the core part of the project and which can be applied to any problem are colored in blue. The classes which are specificly built for the problem of evolving cache replacement strategies are colored in green. These classes are shown without their member variables and functions since these are unimportant in viewing the whole project and the connections between its parts. Finally, the four C++ files which are being compiled to executable programs and subsequently run by the main bash script are colored in blue. These aren't classes so they technically don't belong in a class diagram, but they were included for the sake of showing all the built components and their connections. The diagram was built using the tool \citep{diagrams}.
+Figure A.1 shows a class diagram of the complete project. The classes which belong to the core part of the project and which can be applied to any problem are colored in blue. The classes which are specificly built for the problem of evolving cache replacement strategies are colored in green. These classes are shown without their member variables and functions since these are unimportant in viewing the whole project and the connections between its parts. Finally, the six C++ files which are being compiled to executable programs and subsequently run by the main bash script are colored in yellow. These aren't classes so they technically don't belong in a class diagram, but they were included for the sake of showing all the built components and their connections. The diagram was built using the tool \citep{diagrams}.
 
 \begin{figure}[H]
 	\centering
